compiler/tests/fail/stack_allocation/merge_params.jazz
fn f (reg ptr u64[1] a, reg ptr u64[1] b) -> reg u64 {
  reg u64 res;
  a[0:1] = b[0:1];
  res = a[0];
  return res;
}
